--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "less-loader": "^5.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@vue/cli-service": "~4.5.15",
+    "postcss-pxtorem": "^5.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
