--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "axios": "^0.26.1",
     "less-loader": "^5.0.0",
     "style-resources-loader": "^1.5.0",
     "vue": "^2.6.11",
