--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "less-loader": "^5.0.0",
     "style-resources-loader": "^1.5.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.3"
+    "vue-router": "^3.5.3",
+    "vue-scroller": "^2.2.4"
   },
   "devDependencies": {
     "@vue/cli-service": "~4.5.15",
