--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@better-scroll/pull-up": "^2.4.2",
     "amfe-flexible": "^2.2.1",
     "axios": "^0.26.1",
+    "better-scroll": "^2.4.2",
     "less-loader": "^5.0.0",
     "style-resources-loader": "^1.5.0",
     "vue": "^2.6.11",
