--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "style-resources-loader": "^1.5.0",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
-    "vue-scroller": "^2.2.4"
+    "vue-scroller": "^2.2.4",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-service": "~4.5.15",
